<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="60dp"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment"
>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logobrain"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/logo_mt"
    />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >
            <TextView
                android:id="@+id/lbl_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nr_label_one"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp"
            />
            <EditText
                android:id="@+id/txt_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nr_input_one_hint"
            />
            <TextView
                    android:id="@+id/lbl_frequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nr_label_two"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="20dp"
            />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0"
            >
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textSize="20sp"
                    />
                    <CheckBox
                        android:id="@+id/monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/chk_ml"
                    />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:textSize="20sp"
                    />
                    <CheckBox
                        android:id="@+id/tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/chk_ml"
                    />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textSize="20sp"
                    />
                    <CheckBox
                        android:id="@+id/wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/chk_ml"
                    />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textSize="20sp"
                    />
                    <CheckBox
                        android:id="@+id/thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/chk_ml"
                    />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textSize="20sp"
                    />
                    <CheckBox
                        android:id="@+id/friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/chk_ml"
                    />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textSize="20sp"
                    />
                    <CheckBox
                        android:id="@+id/saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/chk_ml"
                    />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textSize="20sp"
                    />
                    <CheckBox
                        android:id="@+id/sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/chk_ml"
                    />
                </TableRow>
            </TableLayout>

            <TextView
                    android:id="@+id/lbl_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nr_label_three"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="20dp"
            />
            <EditText
                android:id="@+id/txt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nr_input_two_hint"
                android:inputType="time"
            />
            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/nr_button"
                android:textColor="@color/white"
            />
        </LinearLayout>
    </ScrollView>
</LinearLayout>